adding more initial setup and tools

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="row">
+
+<div class="span5">
+<h1>Home</h1>
+</div>
+
+<div class="span11">
+Nothing yet
+</div>
+
+</div>
