some more meat on the pages object

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer>
   <nav class="round">
     <ul>
-      <li><%= link_to "About", pages_about_path %></li>
-      <li><%= link_to "Contact", pages_contact_path %></li>
+      <li><%= link_to "About", page_path("about") %></li>
+      <li><%= link_to "Contact",  page_path("contact") %></li>
     </ul>
   </nav>
 </footer>
