--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Agitracker: <%= @title %></title>
+  <title>Agitracker: <%= @title.capitalize %></title>
   <meta name="description" content="agitracker test application.">
   <meta name="author" content="Mose">
 
