--- a/app/views/admin/pages/_list_pages.html.erb
+++ b/app/views/admin/pages/_list_pages.html.erb
@@ -1,6 +1,6 @@
 <% for page in pages %>
 <div class="page-entry">
-<%= link_to "delete", page, confirm: "Are you sure ?", method: :delete %>
+<%= link_to "delete", :item => page, confirm: "Are you sure ?", method: :delete %>
 -
 <%= link_to "edit", edit_admin_page_path(page) %>
 -
