fixed compliance with rails_best_practices

--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag :action => "create", :controller => "admin/pages" %>
 
-<%= render :partial => "form", :locals => { :page => @page } %>
+<%= render "form", :page => @page  %>
 
 </form>
 </div>
