improved forms a bit and other details

--- a/app/views/admin/pages/edit.html.erb
+++ b/app/views/admin/pages/edit.html.erb
@@ -1,6 +1,6 @@
 <div>
 
-<%= form_tag :action => "update", :controller => "admin/pages", :id => @page.id %>
+<%= form_tag admin_page_path(@page), :method => :put %>
 
 <%= render "form", :page => @page %>
 
