--- a/app/views/admin/pages/_form.html.erb
+++ b/app/views/admin/pages/_form.html.erb
@@ -1,23 +1,35 @@
-<h3>Edit page <%= page.title %></h3>
+<div class="row">
 
-<div>
+<h1><%= params[:action].capitalize %> page <%= page.title %></h1>
+
+<div class="clearfix span9">
 <label for="title">Title</label>
-<%= text_field 'page', 'title' %>
+<div class="input">
+<%= text_field 'page', 'title', :id => 'title', :class => 'span8' %>
+</div>
 </div>
 
-<div>
-<label for="title">Name</label>
-<%= text_field 'page', 'name' %>
+<div class="clearfix span6">
+<label for="name">Name</label>
+<div class="input">
+<%= text_field 'page', 'name', :id => 'name', :class => 'span4' %>
+</div>
 </div>
 
-<div>
-<label for="title">Content</label>
-<%= text_area 'page', 'content' %>
 </div>
 
-<div>
+<div class="clearfix span16">
+<label for="content">Content</label>
+<div class="input">
+<%= text_area 'page', 'content', :id => 'content', :class => 'span13' %>
+</div>
+</div>
+
+<div class="clearfix">
 <label></label>
+<div class="input">
 <%= link_to "Cancel", admin_pages_path, :class => "btn"  %>
 <%= button_tag "Reset", :type => "reset", :class => "btn" %>
 <%= submit_tag "Save", :class => "btn primary" %>
+</div>
 </div>
