--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -4,6 +4,6 @@
 <%= render 'list_pages', :pages => @pages %>
 
 <div>
-<%= link_to "New page", new_admin_page_path %>
+<%= link_to "New page", new_admin_page_path, :class => "btn newbtn" %>
 </div>
 </div>
