--- a/app/views/admin/pages/new.html.erb
+++ b/app/views/admin/pages/new.html.erb
@@ -1,6 +1,6 @@
 <div>
 
-<%= form_tag :action => "update", :controller => "admin/pages" %>
+<%= form_tag :action=>"create", :controller=>"admin/pages" %>
 
 <%= render "form", :page => @page %>
 
