--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,4 @@
 <footer>
-  <nav class="round">
-    <ul>
-      <li><%= link_to "About", page_path("about") %></li>
-      <li><%= link_to "Contact",  page_path("contact") %></li>
-    </ul>
-  </nav>
+Agitracker : <%= link_to "https://github.com/mose/agitracker", "https://github.com/mose/agitracker" %>
 </footer>
 
