--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,16 @@
         <li<%= %{ class="active"}.html_safe if (!page.nil? and page.name === p) %>><%= link_to p.capitalize, page_path(p) %></li>
         <% end %>
       </ul>
+
+      <ul class="nav secondary-nav">
+        <li class="dropdown" data-dropdown="dropdown">
+          <a href="#" class="dropdown-toggle">Admin</a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Pages", admin_pages_path %></li>
+          </ul>
+        </li>
+      </ul>
+
     </div>
   </div>
   </nav>
