--- a/app/views/admin/pages/_list_pages.html.erb
+++ b/app/views/admin/pages/_list_pages.html.erb
@@ -1,9 +1,9 @@
 <% for page in pages %>
-<div class="page-entry">
+<p class="page-entry">
 <%= link_to "delete", admin_page_path(page.id), :controller => "admin/pages", confirm: "Are you sure ?", method: :delete, :class => "btn smallbtn deletebtn" %>
 <%= link_to "edit", edit_admin_page_path(page.id), :class => "btn smallbtn editbtn" %>
 <%= link_to "view", admin_page_path(page.id), :class => "btn smallbtn viewbtn" %>
 <%= page.title %>
-</div>
+</p>
 
 <% end %>
