--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Admin::Users#new</h1>
-<p>Find me in app/views/admin/users/new.html.erb</p>
+<div class="span16">                                                                                                                                                          
+
+<%= form_tag :action=>"create", :controller=>"admin/users" %>
+
+<%= render "form", :user => @user %>
+
+</form>
+
+</div>
+
