--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,9 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class="span16">
+
+<%= form_tag admin_user_path(@user), :method => :put %>
+
+<%= render "form", :user => @user %>
+
+</form>
+
+</div>
