some devise layout adaptation

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,28 +1,60 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row">                                                                                                                                              
+
+<h1>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :name %><br />
-  <%= f.text_field :name %></div>
+<div class="clearfix">
+<%= f.label :name %>
+<div class="input">
+<%= f.text_field :name %>
+</div>
+</div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password %></div>
+<div class="clearfix">
+<%= f.label :email %>
+<div class="input">
+<%= f.email_field :email %>
+</div>
+</div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+<div class="clearfix">
+<%= f.label :password %> 
+<div class="input">
+<i>(leave blank if you don't want to change it)</i><br />
+<%= f.password_field :password %>
+</div>
+</div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+<div class="clearfix">
+<%= f.label :password_confirmation %>
+<div class="input">
+<%= f.password_field :password_confirmation %>
+</div>
+</div>
 
-  <div><%= f.submit "Update" %></div>
+<div class="clearfix">
+<%= f.label :current_password %> 
+<div class="input">
+<i>(we need your current password to confirm your changes)</i><br />
+<%= f.password_field :current_password %>
+</div>
+</div>
+
+<div class="clearfix">
+<%= f.label '' %> 
+<div class="input">
+<%= link_to "Cancel", :back, :class => "btn"  %>
+<%= button_tag "Reset", :type => "reset", :class => "btn" %>
+<%= f.submit "Update", :class => "btn" %>
+</div>
+</div>
+
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
+<%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete, :class => "btn" %>.
 
-<%= link_to "Back", :back %>
