--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -3,16 +3,16 @@
 <h1><%= params[:action].capitalize %> user <%= user.name %></h1>
 
 <div class="clearfix">
-<label for="name">Name</label>
+<%= label :name %>
 <div class="input">
-<%= text_field 'user', 'name', :id => 'title', :class => 'span8' %>
+<%= text_field 'user', 'name' %>
 </div>
 </div>
 
 <div class="clearfix">
-<label for="name">email</label>
+<label for="email">email</label>
 <div class="input">
-<%= text_field 'page', 'email', :id => 'email', :class => 'span8' %>
+<%= email_field 'user', 'email', :id => 'email' %>
 </div>
 </div>
 
