--- a/app/views/admin/pages/show.html.haml
+++ b/app/views/admin/pages/show.html.haml
@@ -1,8 +1,10 @@
 .row
   .span16
     = link_to "<- List", admin_pages_path, :class => "btn"
-    = link_to "Edit", edit_admin_page_path(@page.id), :class => "btn"
-    = link_to "Delete", admin_page_path(@page.id), :controller => "admin/pages", confirm: "Are you sure ?", method: :delete, :class => "btn pull-right"
+    - if can? :update, Page
+      = link_to "Edit", edit_admin_page_path(@page.id), :class => "btn"
+    - if can? :destroy, Page
+      = link_to "Delete", admin_page_path(@page.id), :controller => "admin/pages", confirm: "Are you sure ?", method: :delete, :class => "btn pull-right"
 .row
   .span5
     %h3= @page.title
