--- a/app/views/admin/users/_list_users.html.haml
+++ b/app/views/admin/users/_list_users.html.haml
@@ -1,8 +1,10 @@
 - for user in users
   %p.user-entry
-    = link_to "delete", admin_user_path(user.id), :controller => "admin/users", confirm: "Are you sure ?", method: :delete, :class => "btn smallbtn deletebtn"
-    = link_to "edit", edit_admin_user_path(user.id), :class => "btn smallbtn editbtn"
+    - if can? :destroy, User
+      = link_to "delete", admin_user_path(user.id), :controller => "admin/users", confirm: "Are you sure ?", method: :delete, :class => "btn smallbtn deletebtn"
+    - if can? :update, User
+      = link_to "edit", edit_admin_user_path(user.id), :class => "btn smallbtn editbtn"
     = link_to "view", admin_user_path(user.id), :class => "btn smallbtn viewbtn"
     = user.name
     ,
-    \#{user.email}
+    = user.email
