--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,8 +1,10 @@
 .row
   .span16
     = link_to "<- List", admin_users_path, :class => "btn"
-    = link_to "Edit", edit_admin_user_path(@user.id), :class => "btn"
-    = link_to "Delete", admin_user_path(@user.id), :controller => "admin/users", confirm: "Are you sure ?", method: :delete, :class => "btn pull-right"
+    - if can? :upate, User
+      = link_to "Edit", edit_admin_user_path(@user.id), :class => "btn"
+    - if can? :destroy, User
+      = link_to "Delete", admin_user_path(@user.id), :controller => "admin/users", confirm: "Are you sure ?", method: :delete, :class => "btn pull-right"
 .row
   %div
     %h3= @user.name
