--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,7 +3,7 @@
     %nav
       .fill
         .container
-          = link_to "a.git.racker", root_path, :class => "brand"
+          = link_to "agitracker", root_path, :class => "brand"
           %ul.nav
             - %w{home about contact}.each do |p|
               - if (!page.nil? and page.name === p)
