--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,9 @@ body {
 .loginbox {
   display : block;
 }
+.input .hint {
+  height : auto;
+  font-style : italic;
+  font-size : 10px;
+  line-height : 14px;
+}
