--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -14,9 +14,8 @@
       .clearfix
         = f.label :password
         .input
-          %i (leave blank if you don't want to change it)
-          %br/
           = f.password_field :password
+          .hint (leave blank if you don't want to change it)
       .clearfix
         = f.label :password_confirmation
         .input
@@ -24,15 +23,13 @@
       .clearfix
         = f.label :current_password
         .input
-          %i (we need your current password to confirm your changes)
-          %br/
           = f.password_field :current_password
+          .hint (we need your current password to confirm your changes)
       .clearfix
         = f.label ''
         .input
           = link_to "Cancel", :back, :class => "btn"
           = button_tag "Reset", :type => "reset", :class => "btn"
-          = f.submit "Update", :class => "btn"
+          = f.submit "Update", :class => "btn primary"
     %h3 Cancel my account
     = link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete, :class => "btn"
-    \.
