--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,9 @@
       = render 'layouts/header', :page => @page
       %section.round
         - flash.each do |key, value|
-          %div{:class => "flash #{key}"}= value
+          %div{:class => "alert-message #{key} in fade", 'data-alert' => ''}
+            %a{:class => 'close', :href => '#'} x
+            = value
         = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
